// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PostPreview /> renders correctly with categories 1`] = `
<ImageLink
  className="link"
  imageDescription=""
  imageProps={Object {}}
  images={
    Object {
      "large": "large_image",
      "medium": "medium_image",
      "small": "small_image",
    }
  }
  link="/post/slug"
>
  <CategoryTag
    backgroundColor="#FFFFFF"
    index={0}
    key="0"
    name="categoryName1"
    position="bottom"
    textColor="#000000"
  />
  <CategoryTag
    backgroundColor="#FFFFFF"
    index={1}
    key="1"
    name="categoryName1"
    position="bottom"
    textColor="#000000"
  />
  <h2
    className="title"
  >
    title
  </h2>
</ImageLink>
`;

exports[`<PostPreview /> renders correctly without categories 1`] = `
<ImageLink
  className="link"
  imageDescription=""
  imageProps={Object {}}
  images={
    Object {
      "large": "large_image",
      "medium": "medium_image",
      "small": "small_image",
    }
  }
  link="/post/slug"
>
  <h2
    className="title"
  >
    title
  </h2>
</ImageLink>
`;
